# navio-core

./: .cirrus.yml  .gitignore  AGGREGATION_SESSION_PORT_PLAN.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile.am  README.md  TODO.md  configure.ac
doc/: CMakeLists.txt  bech32-mod-gen-poly.md  benchmarking.md  blsct-cold-signing.md  build-android.md  build-freebsd.md  build-gmp.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cold-staking.md  dependencies.md  developer-notes.md  fuzzing.md  managing-wallets.md  p2p-encrypted-messaging.md  productivity.md  release-notes-0.1.0.md  release-notes.md  release-process.md  shared-libraries.md  tor.md
doc/design/: assumeutxo.md
doc/man/: navio-cli.1  navio-tx.1  navio-util.1  navio-wallet.1  naviod.1
src/: .clang-tidy  CMakeLists.txt  Makefile.am  Makefile.bench.include  Makefile.test.include  Makefile.test_util.include  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.h  base58.cpp  bech32.cpp  bip324.cpp  bitcoin-chainstate.cpp  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet.cpp  blockencodings.cpp  blockencodings.h  btcsignals.h  chain.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  core_io.h  core_memusage.h  core_read.cpp  core_write.cpp  dummywallet.cpp  external_signer.cpp  external_signer.h  headerssync.cpp  httprpc.cpp  httpserver.cpp  httpserver.h  i2p.cpp  (+43 more)
src/aggregation/: combine.cpp  combine.h  pool.cpp  pool.h  session.cpp  session.h
src/bench/: CMakeLists.txt  bech32_mod.cpp  block_assemble.cpp  blsct.cpp  blsct_rp_verify.cpp  blsct_setmem_verify.cpp  blsct_view_tag.cpp  ccoins_caching.cpp  checkblock.cpp  coin_selection.cpp  disconnected_transactions.cpp  duplicate_inputs.cpp  mempool_eviction.cpp  mempool_stress.cpp  p2pmsg.cpp  prevector.cpp  verify_script.cpp  wallet_create.cpp  wallet_create_tx.cpp  wallet_loading.cpp
src/bench/data/: block413567.raw
src/bls/mcl/: common.mk
src/bls/src/: bls_c_impl.hpp
src/blsct/: bech32_mod.cpp  chain.cpp  chain.h  common.h  key_io.cpp  key_io.h  private_key.cpp  private_key.h  public_key.cpp  public_key.h  public_keys.cpp  signature.cpp  signature.h
src/blsct/arith/: elements.cpp  elements.h
src/blsct/bridge/: checkpoint_data.h  epoch.h  logic.cpp  logic.h  merkle.cpp  merkle.h  messages.cpp  messages.h  predicates.h  rpc.cpp  rpc.h  spp.cpp  spp.h  state.cpp  state.h
src/blsct/building_block/: generator_deriver.cpp  generator_deriver.h  lazy_points.cpp  lazy_points.h  weighted_inner_prod_arg.cpp
src/blsct/eip_2333/: bls12_381_keygen.cpp  bls12_381_keygen.h
src/common/: args.cpp  bloom.cpp  config.cpp  interfaces.cpp  netif.cpp  pcp.cpp  run_command.cpp  run_command.h  system.cpp
src/compat/: byteswap.h
src/consensus/: params.h  tx_verify.cpp
src/crypto/: CMakeLists.txt  chacha20.cpp  chacha20poly1305.cpp  common.h  hmac_sha256.cpp  hmac_sha512.cpp  muhash.h  pkcs5_pbkdf2.h  sha256.cpp  sha256_sse4.cpp  sha256_x86_shani.cpp  sha3.cpp  siphash.h
src/ctokens/: tokenid.h
src/index/: base.cpp  coinstatsindex.cpp  txindex.cpp
src/interfaces/: chain.h  handler.h  node.h  wallet.h
src/kernel/: CMakeLists.txt  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  coinstats.cpp  mempool_entry.h  mempool_persist.cpp  notifications_interface.h
src/mnemonic/: mnemonic.cpp  mnemonic.h  wordlist.cpp  wordlist.h
src/node/: blockstorage.cpp  blockstorage.h  chainstate.cpp  coin.cpp  coin.h  context.cpp  context.h  interface_ui.cpp  interface_ui.h  interfaces.cpp  miner.cpp  miner.h  mini_miner.cpp  mini_miner.h  psbt.cpp  transaction.cpp  transaction.h  utxo_snapshot.h
src/p2pmsg/: crypto.cpp  crypto.h  pow.cpp  pow.h  transport.cpp  transport.h  worker_pool.cpp  worker_pool.h
src/policy/: feerate.h  packages.cpp  policy.cpp  rbf.cpp
src/primitives/: block.h  transaction.cpp  transaction.h
src/rfq/: intent_store.cpp  intent_store.h  matcher.cpp  matcher.h  order_cache.cpp  order_cache.h  quote.h  request.h
src/rpc/: blockchain.cpp  client.cpp  external_signer.cpp  mempool.cpp  mining.cpp  net.cpp  node.cpp  output_script.cpp  p2pmsg.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  register.h  server.cpp  server.h  signmessage.cpp  util.cpp  util.h
src/script/: interpreter.cpp  interpreter.h  miniscript.cpp  miniscript.h  script.cpp  script.h  script_error.h  sign.cpp  signingprovider.cpp
src/support/: lockedpool.cpp
src/test/: CMakeLists.txt  README.md  aggregation_tests.cpp  argsman_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  blockfilter_tests.cpp  bloom_tests.cpp  blsct_signature_checker_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  denialofservice_tests.cpp  headers_sync_chainwork_tests.cpp  key_io_tests.cpp  mempool_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  miniminer_tests.cpp  miniscript_tests.cpp  mnemonic_tests.cpp  multisig_tests.cpp  net_peer_connection_tests.cpp  orphanage_tests.cpp  p2pmsg_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  rbf_tests.cpp  rfq_tests.cpp  rpc_tests.cpp  scheduler_tests.cpp  script_p2sh_tests.cpp  script_parse_tests.cpp  script_tests.cpp  serialize_tests.cpp  settings_tests.cpp  sighash_tests.cpp  (+11 more)
src/univalue/: CMakeLists.txt
src/util/: CMakeLists.txt  error.h  fs_helpers.cpp  hasher.h  message.h  overflow.h  strencodings.cpp  strencodings.h  string.h  tokenpipe.cpp  transaction_identifier.h  tui_dashboard.h
src/wallet/: CMakeLists.txt  bdb.cpp  coinselection.cpp  coinselection.h  crypter.cpp  crypter.h  db.cpp  db.h  dump.cpp  external_signer_scriptpubkeyman.h  feebumper.cpp  init.cpp  interfaces.cpp  load.cpp  receive.cpp  receive.h  scriptpubkeyman.cpp  scriptpubkeyman.h  spend.cpp  spend.h  sqlite.cpp  sqlite.h  transaction.cpp  transaction.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  wallettool.cpp  walletutil.h
src/zmq/: CMakeLists.txt  zmqabstractnotifier.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h
(+510 files in other folders)
